# vespera

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
packaging/: io.github.hamza_abdelmoumene.vespera.metainfo.xml  vespera.desktop
packaging/appimage/: build.sh
packaging/aur/: .SRCINFO  PKGBUILD
packaging/aur-git/: .SRCINFO  PKGBUILD
packaging/flatpak/: io.github.hamza_abdelmoumene.vespera.yml
qml/: Main.qml  Theme.qml  blockfont.js
qml/components/: CoverArt.qml  DiscGlow.qml  EclipseDisc.qml  Equalizer.qml  GlassPanel.qml  GlyphButton.qml  HelpOverlay.qml  IconButton.qml  LyricsPanel.qml  NowPlaying.qml  PlaybackExtras.qml  PlayerPane.qml  PresetButton.qml  SeekBar.qml  ThemePicker.qml  TransportBar.qml  Visualizer.qml
qml/scene/: AuroraOverlay.qml  Backdrop.qml  CoverBackdrop.qml  FloatingNotes.qml  StarfieldOverlay.qml  StarryScene.qml  SynthwaveOverlay.qml
src/: main.cpp
src/core/: AppController.cpp  AppController.h  AppImageProvider.h  CavaService.cpp  CavaService.h  ControlAdaptor.h  CoverStore.cpp  CoverStore.h  EqService.cpp  EqService.h  LyricsService.cpp  LyricsService.h  MprisController.cpp  MprisController.h  MprisPlayer.cpp  MprisPlayer.h  OklchColor.h  PaletteExtractor.cpp  PaletteExtractor.h  ThemeManager.cpp  ThemeManager.h
